# multi-armed-bandit

./: .gitignore  CLAUDE.md  Makefile  README.md  failingserver-binary-goes-here
docs/: problem-statement.md  (+2 more)
flaky-load-balancer/: Makefile  metrics.json  pyproject.toml
flaky-load-balancer/dashboard/: WARNING.md  package-lock.json  package.json
flaky-load-balancer/dashboard/app/: globals.css  layout.tsx  page.tsx
flaky-load-balancer/dashboard/components/: AppShell.tsx  ExportButton.tsx  Header.tsx  StatsPanel.tsx
flaky-load-balancer/dashboard/constants/: chartStyles.ts
flaky-load-balancer/flaky_load_balancer/: cli.py  config.py  constants.py  csv_logger.py  harness.py  http_client.py  logger.py  main.py  metrics.py  middleware.py  paths.py
flaky-load-balancer/resources/: failingserver-binary-goes-here
flaky-load-balancer/runs/: 2026-01-20_06-48-48_v1.csv  2026-01-20_06-49-05_v2.csv  2026-01-20_06-49-21_v3.csv  2026-01-20_06-49-38_v4.csv  2026-01-20_06-49-55_v5.csv  2026-01-20_07-16-00_v1.csv  2026-01-20_07-16-16_v2.csv  2026-01-20_07-16-33_v3.csv  2026-01-20_07-16-50_v4.csv  2026-01-20_07-17-06_v5.csv  2026-01-21_07-20-33_v1_T1.csv  2026-01-21_07-20-45_v2_T1.csv  2026-01-21_07-20-57_v3_T1.csv  2026-01-21_07-21-08_v4_T1.csv  2026-01-21_07-21-20_v5_T1.csv  2026-01-21_07-21-31_v1_T2.csv  2026-01-21_07-21-43_v2_T2.csv  2026-01-21_07-21-55_v3_T2.csv  2026-01-21_07-22-06_v4_T2.csv  2026-01-21_07-22-18_v5_T2.csv  2026-01-21_07-22-30_v1_T3.csv  2026-01-21_07-22-41_v2_T3.csv  2026-01-21_07-22-53_v3_T3.csv  2026-01-21_07-23-04_v4_T3.csv  2026-01-21_07-23-16_v5_T3.csv
(+60 files in other folders)
