[project]
name = "flaky-load-balancer"
version = "0.1.0"
description = "Load balancer with multi-armed bandit routing strategies"
authors = [{ name = "John Larkin", email = "john@johnjlarkin.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "rich>=14.0.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
flb = "flaky_load_balancer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = ["tests", "tests/**", "venv", "venv/**"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["flaky_load_balancer"]
